CustomDialog.show(context, R.layout.layout_custom_dialog, new CustomDialog.BindView() {     @Override     public void onBind(View rootView) {         //绑定布局         ImageView btnOk = rootView.findViewById(R.id.btn_ok);         //绑定事件         btnOk.setOnClickListener(new View.OnClickListener() {             @Override             public void onClick(View v) {                 //...             }         });     } }); CustomDialog 的创建方式支持通过 layout 资源 ID 或直接使用 View 创建，其也支持对话框的模态化以及生命周期管理。
需要在自定义的对话框中关闭 CustomDialog，您可以在全局接收 CustomDialog 的 show 或 build 返回的组件，并执行其 doDismiss() 方法：

pri

--- a/kotlindialog/src/main/res/layout/layout_normal_pop.xml
+++ b/kotlindialog/src/main/res/layout/layout_normal_pop.xml
@@ -5,8 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
-
-    <com.kongzue.dialog.util.ShadowLayout
+<com.jeff.kotlindialog.widget.ShadowLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:sl_shadow_angle="90"
@@ -88,6 +87,6 @@
 
         </LinearLayout>
 
-    </com.kongzue.dialog.util.ShadowLayout>
+</com.jeff.kotlindialog.widget.ShadowLayout>
 
 </LinearLayout>
