--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="bottom"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:onClick="botn"
         android:text="Hello World!" />
 
 </LinearLayout>
